<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <TextView 
        android:id="@+id/activitedtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:textSize="30sp"
        android:text="@string/activatedtitle"/>
    <TextView 
        android:id="@+id/activitedTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/activitedtitle"
        android:textSize="20sp"
        />
    <TextView 
        android:id="@+id/activatedtimeresetsuccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="18sp"
        android:visibility="gone"
        android:text="@string/activatedresetsuccess"/>
    <LinearLayout 
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button 
            android:id="@+id/activitedreset"
            android:layout_margin="5dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/activatedreset"
            android:onClick="ActivatedTimeOnclick"
            android:background="@drawable/selector_button"/>
        <Button 
            android:id="@+id/activitedexit"
            android:layout_margin="5dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/activatedexit"
            android:onClick="ActivatedTimeOnclick"
            android:background="@drawable/selector_button"/>
    </LinearLayout>
</RelativeLayout>
