<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mlt.csdtool.common.TestAccessActivity$PlaceholderFragment" >

    <LinearLayout
        android:id="@+id/mlinmmitest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:background="@drawable/selector_textview"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imgmmi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/down"
            android:contentDescription="@string/row" />

        <TextView
            
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="@string/mstringmmi"
            android:textSize="18sp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/line" />
    <TextView
        android:id="@+id/mtvsingletest"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:onClick="onClick"
        android:background="@drawable/selector_textview"
        android:text="@string/mstringmmisingle"
        android:visibility="gone"
        />
    <ImageView
        android:id="@+id/mimgsingletest"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/line" />
    <TextView
        android:id="@+id/mtvcontinuetest"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:onClick="onClick"
        android:background="@drawable/selector_textview"
        android:text="@string/mstringmmicontinue"
        android:visibility="gone"
        />
    <ImageView
        android:id="@+id/mimgcontinuetest"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/line" />
    <LinearLayout
        android:id="@+id/mlinrffuction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:background="@drawable/selector_textview"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imgrf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/down"
            android:contentDescription="@string/row" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="@string/mstringrf"
            android:textSize="18sp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/line" />

    <TextView
        android:id="@+id/mtvcardsingletwoG"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:onClick="onClick"
        android:background="@drawable/selector_textview"
        android:text="@string/mstringcardsingletwog"
        android:visibility="gone" />
    <ImageView
        android:id="@+id/mimgcardsingletwoG"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/line" />
    <TextView
        android:id="@+id/mtvcardsinglethreeG"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:onClick="onClick"
        android:background="@drawable/selector_textview"
        android:text="@string/mstringcardsinglethreeg"
        android:visibility="gone" />
    <ImageView
        android:id="@+id/mimgcardsinglethreeG"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/line" />
    <TextView
        android:id="@+id/mtvcardsinglefourG"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:onClick="onClick"
        android:background="@drawable/selector_textview"
        android:text="@string/mstringcardsinglefourg"
        android:visibility="gone" />
    <ImageView
        android:id="@+id/mimgcardsinglefourG"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/line" />
    <TextView
        android:id="@+id/mtvgps"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:onClick="onClick"
        android:background="@drawable/selector_textview"
        android:text="@string/mstringgps"
        android:visibility="gone" />
    <ImageView
        android:id="@+id/mimggps"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/line" />

    <LinearLayout
        android:id="@+id/mlinrootinfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:background="@drawable/selector_textview"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imgroot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/down"
            android:contentDescription="@string/row" />

        <TextView
            
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="@string/mstringroot"
            android:textSize="18sp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/line" />

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/mlinstatisticinfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:background="@drawable/selector_textview"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imgstatistic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/down"
            android:contentDescription="@string/row" />

        <TextView
            
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="@string/mstringstatistic"
            android:textSize="18sp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/line" />

    <LinearLayout
        android:id="@+id/mlinactivationtime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:background="@drawable/selector_textview"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imgactivation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/down"
            android:contentDescription="@string/row" />

        <TextView
            
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="@string/mstringactivation"
            android:textSize="18sp" />
    </LinearLayout>
     <ImageView
         android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/line" />

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/mlinresetpsensor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:background="@drawable/selector_textview"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imgresetpsensor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/down"
            android:contentDescription="@string/row" />

        <TextView
            
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="@string/mstringresetpsensor"
            android:textSize="18sp" />
    </LinearLayout>


</LinearLayout>