<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout 
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">
            <TextView 
                android:gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/adb"/>
            <TextView 
                android:id="@+id/mtvadb"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">
            <TextView 
                android:gravity="right"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/su"/>
            <TextView 
                android:textSize="20sp"
                android:id="@+id/mtvsu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <LinearLayout 
            android:id="@+id/linerresult"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">
            <TextView 
                android:textSize="20sp"
                android:gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result"/>
            <TextView 
                android:textSize="20sp"
                android:id="@+id/mtvresult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout 
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button 
            android:id="@+id/verifynow"
            android:layout_margin="5dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onRootItemClick"
            android:text="@string/verifynow"
            android:background="@drawable/selector_button"/>
        <Button 
            android:id="@+id/rootfail"
            android:layout_margin="5dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onRootItemClick"
            android:text="@string/activatedexit"
            android:background="@drawable/selector_button"/>
    </LinearLayout>
</RelativeLayout>
